--- a/src/scss/enhance/_proof-points.scss
+++ b/src/scss/enhance/_proof-points.scss
@@ -27,6 +27,7 @@
     // font-family: Georgia, serif;
     display: inline-block;
     margin-bottom: .25em;
+    white-space: nowrap;
 
     @include respond-min($medium){
     	font-size: 3rem;
