--- a/src/scss/fizz.scss
+++ b/src/scss/fizz.scss
@@ -9,6 +9,7 @@
 "base/fluidity",
 "base/space",
 "base/tables",
+"base/forms",
 
 "typography/typography",
 
@@ -55,6 +56,7 @@
 "enhance/carousel",
 "enhance/image-hover", 
 "enhance/collapsible-block", 
+"enhance/odometer",
 
 "base/utils"
 ;
