--- a/src/scss/modules/_section--home.scss
+++ b/src/scss/modules/_section--home.scss
@@ -52,13 +52,13 @@
 
 
 .section--home__academics {
-	background: url("//c2.staticflickr.com/6/5001/13992066213_1c78bc7f90_h.jpg");
+	background: url("//cdn1.bethel.edu/resize/unsafe/1600x0/smart/https://www.bethel.edu/_homepages/www/images/chemistry-lab.jpg");
 	background-size: cover;
 	background-position: center;
 }
 
 .section--home__faith {
-	background: url("cdn1.bethel.edu/resize/unsafe/1600x0/smart/https://www.bethel.edu/_homepages/www/images/girl-laughing.jpg");
+	background: url("//cdn1.bethel.edu/resize/unsafe/1600x0/smart/https://www.bethel.edu/_homepages/www/images/girl-laughing.jpg");
 	background-size: cover;
 	background-position: center;
 }
