--- a/src/templates/partials/moving-picture.hbs
+++ b/src/templates/partials/moving-picture.hbs
@@ -1,8 +1,8 @@
 <div class="slick-carousel  carousel--overlay">
-    <div class="slick-item">
+{{!--     <div class="slick-item">
 		<div class="moving-picture">
 			<div class="moving-picture__media">
-				<video autoplay="true" id="home-video" loop="true" muted="true">
+				<video autoplay="true" class="home-video" loop="true" muted="true">
 					<source src="https://www.bethel.edu/_testing/jmo/banner-collection/Homepage_-_Feature.webm" type="video/webm">
 					Your browser does not support the video tag.
 				</video>
@@ -17,23 +17,43 @@
 			    </div>
 		    </div>
 		</div>
-	</div>
-
-{{!-- 	<div class="slick-item">
-		<div class="moving-picture">
-			<div class="moving-picture__media">
-		    	<img src="//cdn3.bethel.edu/resize/unsafe/1500x0/smart/https://www.bethel.edu/_homepages/www/images/feature/affordability.jpg" class="$imgClass image-replace" alt="$imgDesc" data-src="//cdn3.bethel.edu/resize/unsafe/{width}x0/smart/https://www.bethel.edu/_homepages/www/images/feature/affordability.jpg">
-			</div>
-			<div class="va-container">
-				<div class="va-bottom">
-				<div class="moving-picture__overlay">
-			        <h2 class="moving-picture__overlay__headline">Making your Bethel education more affordable.</h2>
-			        <p class="moving-picture__overlay__teaser">We're committed to not letting cost stand in the way of your life-changing education, so we doubled the amount of Bethel funded scholarships and grants over the last few years to $32 million and reset tuition and aid at the seminary. Talk to your enrollment counselor to find out how financial aid can work for you.</p>
-			        <p><a class="moving-picture__overlay__button btn" href="../../../undergrad/index.php">Learn More</a></p>
-			    </div>
-			    </div>
-		    </div>
-		</div>
 	</div> --}}
+
+<div class="slick-item">
+    <div class="moving-picture">
+        <div class="moving-picture__media">
+            <picture>
+                <source media="(min-width: 830px)" srcset="//cdn2.bethel.edu/resize/unsafe/1600x0/smart/https://www.bethel.edu/_homepages/www/images/feature/affordability-student-16x9.jpg"> 
+                <img src="https://www.bethel.edu/_homepages/www/images/feature/affordability-student-2x1.jpg"> 
+            </picture>
+        </div>
+
+                <div class="moving-picture__overlay">
+                    <h2 class="moving-picture__overlay__headline">Making your Bethel education more affordable.</h2>
+                    <p class="moving-picture__overlay__teaser">We're committed to not letting cost stand in the way of your life-changing education, so we doubled the amount of Bethel funded scholarships and grants over the last few years to $32 million and reset tuition and aid at the seminary. Talk to your enrollment counselor to find out how financial aid can work for you.</p> 
+                    <p><a class="moving-picture__overlay__button" href="admissions/index.php">Learn More</a></p>
+                </div>
+
+    </div>
+</div>
+
+
+<div class="slick-item">
+    <div class="moving-picture">
+        <div class="moving-picture__media">
+            <picture>
+                <source media="(min-width: 830px)" srcset="//cdn2.bethel.edu/resize/unsafe/1600x0/smart/https://www.bethel.edu/_homepages/www/images/feature/affordability-student-16x9.jpg"> 
+                <img src="https://www.bethel.edu/_homepages/www/images/feature/affordability-student-2x1.jpg"> 
+            </picture>
+        </div>
+
+                <div class="moving-picture__overlay">
+                    <h2 class="moving-picture__overlay__headline">Really Making your Bethel education more affordable.</h2>
+                    <p class="moving-picture__overlay__teaser">We're committed to not letting cost stand in the way of your life-changing education, so we doubled the amount of Bethel funded scholarships and grants over the last few years to $32 million and reset tuition and aid at the seminary. Talk to your enrollment counselor to find out how financial aid can work for you.</p> 
+                    <p><a class="moving-picture__overlay__button" href="admissions/index.php">Yes Learn More</a></p>
+                </div>
+
+    </div>
+</div>
 
 </div>
