--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -20,3 +20,6 @@ $gotham-ssm: "Gotham SSm A", "Gotham SSm B", Helvetica, Arial, sans;
 $gotham: "Gotham A", "Gotham B", Helvetica, Arial, sans;
 $sentinel: 'Sentinel A', 'Sentinel B', Georgia, serif;
 $sentinel-ssm: 'Sentinel SSm A', 'Sentinel SSm B', Georgia, serif;
+
+$baseLineHeight: 1.5;
+$baseFontSize: 16px;
