--- a/src/scss/site/_site__title.scss
+++ b/src/scss/site/_site__title.scss
@@ -41,7 +41,7 @@
   // // width: 100%; 
   // margin-top: 0;
   // margin-bottom: 0;
-  // margin-top: 0;
+  margin-top: 2em;
   // margin-right: 1em;
   padding: .75em 0;
   // // margin: .5em;
