made some changes

--- a/src/scss/enhance/_animation.scss
+++ b/src/scss/enhance/_animation.scss
@@ -38,3 +38,8 @@
 .js-animate .animate--slideUpFadeIn {
   animation-name: slideUpFadeIn;
 }
+
+
+// .js-wordAnimate {
+//   animation-name: slideUpFadeIn;
+// }
