--- a/src/templates/pages/layout.hbs
+++ b/src/templates/pages/layout.hbs
@@ -62,13 +62,30 @@ layout: default.hbs
 <div class="section--home__holder  section--home__story">
 	<div class="inner">
 		<div class="grid">
-			<div class="grid-cell  u-medium-1-2  u-large-2-5">
-				<h2>Your story starts here.</h2>
-				<p>You’re looking for a place where you can</p>
-				<h3>challenge yourself, support the people around you, find community, laugh...a lot, learn new things, live out your faith, make a difference, serve your neighbors, explore the world, create hope, work hard, dream big, live with purpose, have tons of fun, ask important questions, spread Christ’s love</h3>
-				<p>Bethel is that place. Here, you’ll be challenged to think critically and creatively as you make discoveries that can change the world. You’ll be supported by a community of friends and mentors as you follow your dreams and discover your purpose. And you’ll be inspired to do and be your best as you find new ways to spread Christ’s love. 
-				You were made to accomplish incredible things. Get started at Bethel.</p>
-				<p class="mt2"><a href="//www.bethel.edu/admissions/request-info/" class="btn  mr1">Request info</a> <a href="//www.bethel.edu/admissions/apply/" class="btn">Start your application</a></p>			
+			<div class="grid-cell  u-medium-1-2  u-large-3-5  rotate-text">
+				{{!-- <p>You’re looking for a place where you can</p> --}}
+
+				{{!-- <h3 class="animate  rotate-text__holder">challenge yourself</h3> --}}
+{{!-- 				<span><em>support the people around you</em></span>
+				<span><em>find community</em></span>
+				<span><em>laugh...a lot</em></span>
+				<span><em>learn new things</em></span>
+				<span><em>live out your faith</em></span>
+				<span><em>make a difference</em></span>
+				<span><em>serve your neighbors</em></span>
+				<span><em>explore the world</em></span>
+				<span><em>create hope</em></span>
+				<span><em>work hard</em></span>
+				<span><em>dream big</em></span>
+				<span><em>live with purpose</em></span>
+				<span><em>have tons of fun</em></span>
+				<span><em>ask important questions</em></span>
+				<span><em>spread Christ’s love</em></span> --}}
+				<h2 class="mv1">Your story starts here.</h2>
+				<p>Here, you’ll be challenged to think critically and creatively as you make discoveries that can change the world. You’ll be supported by a community of friends and mentors as you follow your dreams and discover your purpose. And you’ll be inspired to do and be your best as you find new ways to spread Christ’s love.</p>
+				<h3>You were made to accomplish incredible things. Get started at Bethel.</h3>
+			
+				<p class="mt2"><a href="//www.bethel.edu/admissions/request-info/" class="btn  mb1  mr1">Request info</a> <a href="//www.bethel.edu/admissions/apply/" class="mb1 btn">Start your application</a></p>			
 			</div>
 		</div>
 	</div>	
