--- a/src/scss/modules/_section--home.scss
+++ b/src/scss/modules/_section--home.scss
@@ -3,7 +3,7 @@
 }
 
 .section--home__holder:before {
-	background-image: linear-gradient(to bottom left, transparent, #000);
+	background-image: linear-gradient(to bottom left, transparent, #000),linear-gradient(to bottom left, transparent, #000);
 	position: absolute;
 	top: 0;
 	bottom: 0;
@@ -20,7 +20,7 @@
 	font-family: $gotham;
 	background: $bethel--blue;
 	font-size: 100%;
-	color: #ccc;
+	color: #ddd;
 	position: relative;
 	display: table;
 
@@ -70,10 +70,16 @@
 }
 
 .section--home__story {
-	background-color: #000;
+	// background-color: #000;
 
 	.grid-cell {
 		margin: 0 auto !important;
-		text-align: center;
+		// text-align: center;
+	}
+
+	.rotate-text__holder {
+		color: $bethel--yellow;
+		font-weight: 400;
+		font-size: 2rem;
 	}
 }
