--- a/src/templates/layouts/default.hbs
+++ b/src/templates/layouts/default.hbs
@@ -16,8 +16,9 @@ layout:default.hbs
 
 		{{!-- {{> school__navigation }} --}}
 
-		{{> moving-picture }}
+		{{!-- {{> moving-picture }} --}}
 
+		{{> body }}
 
 		<p class="site__title__button" id="js-site__title__button"><a href="#siteNav">☰ In This Section</a></p>
 
@@ -28,7 +29,6 @@ layout:default.hbs
 
 		        {{> page__title }}
 
-				{{> body }}
 
 		    </div>
 		</div>
