--- a/src/templates/pages/layout.hbs
+++ b/src/templates/pages/layout.hbs
@@ -83,7 +83,7 @@ layout: default.hbs
 				<span><em>spread Christ’s love</em></span> --}}
 				<h2 class="mv1">Your story starts here.</h2>
 				<p>Here, you’ll be challenged to think critically and creatively as you make discoveries that can change the world. You’ll be supported by a community of friends and mentors as you follow your dreams and discover your purpose. And you’ll be inspired to do and be your best as you find new ways to spread Christ’s love.</p>
-				<h3>You were made to accomplish incredible things. Get started at Bethel.</h3>
+				<h3 class="mv2">You were made to accomplish incredible things. Get started at Bethel.</h3>
 			
 				<p class="mt2"><a href="//www.bethel.edu/admissions/request-info/" class="btn  mb1  mr1">Request info</a> <a href="//www.bethel.edu/admissions/apply/" class="mb1 btn">Start your application</a></p>			
 			</div>
