--- a/src/templates/partials/head.hbs
+++ b/src/templates/partials/head.hbs
@@ -9,5 +9,5 @@
     {{> favicons }}
 
     <link rel="stylesheet" href="/css/fizz.css"/>
-    <link href="//cloud.typography.com/6664852/692222/css/fonts.css" rel="stylesheet"/>
+    <link rel="stylesheet" type="text/css" href="//cloud.typography.com/6664852/762926/css/fonts.css" />
 </head>
