--- a/src/scss/modules/_moving-picture.scss
+++ b/src/scss/modules/_moving-picture.scss
@@ -5,10 +5,12 @@
 	
 	@include respond-min(830px){
 		height: auto;
+		display: inline-block;
 	}
 
 	@include respond-min(1200px){
 		height: 675px;
+		display: block;
 	}
 }
 
@@ -75,14 +77,14 @@
 
 	@include respond-min($x-large){
 		// margin-left: 3rem;
-		width: 50%;
+		// width: 50%;
 	}
 }
 
 .moving-picture__overlay__headline {
-	font-size: 1.35em;
+	font-size: 1.5em;
 	margin: 0;
-	font-weight: 100;
+	font-weight: 300;
 	letter-spacing: .02em;
 	// text-transform: uppercase;
 
@@ -113,6 +115,10 @@
 	text-transform: uppercase;
 	font-weight: 500;
 	letter-spacing: .02em;
-	margin-top: .5em;
+	margin-top: 0;
 	display: inline-block;
+
+	@include respond-min($medium){
+		margin-top: .5em;
+	}
 }
