trying to move the css inline

--- a/src/scss/pop.scss
+++ b/src/scss/pop.scss
@@ -5,8 +5,8 @@
 "mixins",
 
 "base/normalize",
-"base/base",
-"base/fluidity",
+// "base/base",
+// "base/fluidity",
 "base/space",
 "base/tables",
 "base/forms",
@@ -14,21 +14,21 @@
 "typography/typography",
 
 "grid/flex-grid",
-"grid/layout",
+// "grid/layout",
 
-"global/header",
-"global/toolbox",
-"global/navigation",
-"global/breadcrumb",
+// "global/header",
+// "global/toolbox",
+// "global/navigation",
+// "global/breadcrumb",
 "global/footer",
 
-"school/school__navigation",
+// "school/school__navigation",
 
-"site/site__title",
+// "site/site__title",
 "site/site__features",
 "site/site__image-bank",
 
-"page/page__title",
+// "page/page__title",
 "page/page--home",
 
 "modules/section--apply",
@@ -45,8 +45,8 @@
 "enhance/big-steps",
 "enhance/buttons",
 "enhance/date-tag",
-"enhance/off-canvas2",
-"enhance/off-canvas--main",
+// "enhance/off-canvas2",
+// "enhance/off-canvas--main",
 "enhance/parallax",
 "enhance/proof-points",
 "enhance/quotes",
