--- a/src/templates/pages/layout.hbs
+++ b/src/templates/pages/layout.hbs
@@ -1,6 +1,6 @@
 ---
 title: LAYOUT
-layout: default.hbs
+layout: default
 ---
 
 <div class="section--home__holder  section--home__academics  parallax">
