--- a/src/templates/partials/site__title.hbs
+++ b/src/templates/partials/site__title.hbs
@@ -1,6 +1,6 @@
 <div class="inner">
 	<div class="site__title">
-		<p class="breadcrumb  margins-off"><a href="/"><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#home" xmlns="#"></use></svg></a><a href="/undergrad">Adult Undergrad</a><a href="#">Academics</a>
+		{{> breadcrumb }}
 		    <span class="breadcrumb--active">Anthropology, Sociology and Reconciliation Studies</span></p>
 		{{!-- <h1>Anthropology, Sociology and Reconciliation Studies</h1> --}}
 	    <p class="site__title__button" id="js-site__title__button"><a href="#siteNav">☰ In This Section</a></p>
