--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -1,6 +1,6 @@
 @mixin respond-min($width) {
-  @media screen and (min-width: $width) {@content;}
+  @media only screen and (min-width: $width) {@content;}
 }
 @mixin respond-max($width) {
-  @media screen and (max-width: $width) {@content;}
+  @media only screen and (max-width: $width) {@content;}
 }
