--- a/src/scss/enhance/_proof-points.scss
+++ b/src/scss/enhance/_proof-points.scss
@@ -10,6 +10,10 @@
         padding: 1em;
         border-radius: 5px;
         margin: 1em;
+
+        [class*='grid-pad'] {
+            flex: 1;
+        }
     }
 }
 
