--- a/src/templates/layouts/default.hbs
+++ b/src/templates/layouts/default.hbs
@@ -1,12 +1,11 @@
----
-layout:default.hbs
----
+
 <!doctype html>
 <html class="" lang="">
 
 {{> head }}
 
 <body class="no-js" id="top">
+<script type="text/javascript">document.body.className = document.body.className.replace("no-js","js");</script>
 
 	{{> global--school}}
 
@@ -16,8 +15,7 @@ layout:default.hbs
 
 		{{!-- {{> school__navigation }} --}}
 
-		{{> moving-picture }}
-
+		{{!-- {{> moving-picture }} --}}
 
 		<p class="site__title__button" id="js-site__title__button"><a href="#siteNav">☰ In This Section</a></p>
 
@@ -28,7 +26,8 @@ layout:default.hbs
 
 		        {{> page__title }}
 
-				{{> body }}
+				{{!-- {{> body }} --}}
+				{% body %}
 
 		    </div>
 		</div>
@@ -36,9 +35,37 @@ layout:default.hbs
 		{{> global__footer }}
 
 	</div>
+	<script type="text/javascript">
+		"use strict";
+		var toggleGlobalNav = function(e) {
+		    e.preventDefault();
+		    document.querySelector('body').classList.toggle('js-openGlobalNav');
+		};
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="/js/bundle.js"></script>
+		var toggleSiteNav = function(e) {
+		    e.preventDefault();
+		    document.querySelector('body').classList.toggle('js-openSiteNav');
+		};
 
+		var globalNavBtn = document.querySelector('#js-globalNav-button');
+		var globalNavBtnClose = document.querySelector('#js-globalNav-button--close');
+		var siteTitleBtn = document.querySelector('#js-site__title__button');
+
+		if(globalNavBtn){globalNavBtn.addEventListener('click',toggleGlobalNav);}
+		if(globalNavBtnClose){globalNavBtnClose.addEventListener('click',toggleGlobalNav);}
+		if(siteTitleBtn){siteTitleBtn.addEventListener('click',toggleSiteNav);}
+
+		function loadCSS( href, before, media, callback ){"use strict"; var ss = window.document.createElement( "link" ); var ref = before || window.document.getElementsByTagName( "script" )[ 0 ]; var sheets = window.document.styleSheets; ss.rel = "stylesheet"; ss.href = href; ss.media = "only x"; if( callback ) {ss.onload = callback; } ref.parentNode.insertBefore( ss, ref ); ss.onloadcssdefined = function( cb ){var defined; for( var i = 0; i < sheets.length; i++ ){if( sheets[ i ].href && sheets[ i ].href.indexOf( href ) > -1 ){defined = true; } } if( defined ){cb(); } else {setTimeout(function() {ss.onloadcssdefined( cb ); }); } }; ss.onloadcssdefined(function() {ss.media = media || "all"; }); return ss; } 
+		function onloadCSS( ss, callback ) {ss.onload = function() {ss.onload = null; if( callback ) {callback.call( ss ); } }; if( "isApplicationInstalled" in navigator && "onloadcssdefined" in ss ) {ss.onloadcssdefined( callback ); } }
+	    	var fizz = loadCSS( "/css/pop.css" );
+	    	onloadCSS( fizz, function() {console.log( "pop has asynchronously loaded." ); });
+	    	var cloud = loadCSS( "//cloud.typography.com/6664852/762926/css/fonts.css" );
+	    	onloadCSS( cloud, function() {console.log( "cloud has asynchronously loaded." ); });
+	    function loadJS( src, cb ){"use strict"; var ref = window.document.getElementsByTagName( "script" )[ 0 ]; var script = window.document.createElement( "script" ); script.src = src; script.async = true; ref.parentNode.insertBefore( script, ref ); if (cb && typeof(cb) === "function") {script.onload = cb; } return script; } 
+			loadJS("/js/bundle.js");
+	</script>
+	<noscript><link href="/css/pop.css" rel="stylesheet" /></noscript>
+	
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 </body>
 </html>
