--- a/src/templates/partials/breadcrumb.hbs
+++ b/src/templates/partials/breadcrumb.hbs
@@ -1,3 +1,10 @@
 <div class="inner">
-<p class="breadcrumb  margins-off"><a href="/"><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#home" xmlns="#"></use></svg></a><a href="/undergrad">Adult Undergrad</a><a href="/undergrad/academics">Academics</a></p>
+    <p class="breadcrumb  margins-off">
+       {{!--  <a href="/">
+            <svg class="svg-icon">
+                <use xlink:href="../assets/icon-sprite/symbols.svg#home" xmlns="#"></use>
+            </svg>
+        </a> --}}
+        <a href="/undergrad">Adult Undergrad</a><a href="/undergrad/academics">Academics</a>
+    </p>
 </div>
