--- a/src/templates/partials/page__title.hbs
+++ b/src/templates/partials/page__title.hbs
@@ -1,5 +1,5 @@
 <div class="page__title">
 	<h1>Sociocultural Studies</h1>
-    <p class="breadcrumb"><a href="/"><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#home" xmlns="#"></use></svg></a><a href="/undergrad">Undergrad</a><a href="#">Academics</a><a>Anthropology, Sociology & Reconciliation</a><a>Majors & Minors</a><a>Sociocultural Studies</a></p>
-
+    {{!-- <p class="breadcrumb"><a href="/"><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#home" xmlns="#"></use></svg></a><a href="/undergrad">Undergrad</a><a href="#">Academics</a><a>Anthropology, Sociology & Reconciliation</a><a>Majors & Minors</a><a>Sociocultural Studies</a></p> --}}
+	{{> breadcrumb }}
 </div>
