--- a/src/scss/enhance/_odometer.scss
+++ b/src/scss/enhance/_odometer.scss
@@ -61,7 +61,7 @@
 }
 
 .odometer.odometer-auto-theme, .odometer.odometer-theme-default {
-  // font-family: "Helvetica Neue", sans-serif;
+  font-family: "Helvetica Neue",helvetica,arial,sans-serif;
   // line-height: 1.1em;
 }
 .odometer.odometer-auto-theme .odometer-value, .odometer.odometer-theme-default .odometer-value {
