--- a/src/scss/enhance/_proof-points.scss
+++ b/src/scss/enhance/_proof-points.scss
@@ -2,21 +2,31 @@
     color: #fff;
 
     .grid-cell {
-        display: flex;
-        justify-content: center;
-        align-items: center;
         background: $bethel--navy;
-        // background: $bethel--yellow;
         padding: 1em;
         border-radius: 5px;
         margin: 1em;
+
+        @include respond-min($medium){
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex: 1;
+        }
+
+    }
+
+    @include respond-min($medium){
+        [class*='grid-pad'] {
+            flex: 1;
+        }
     }
 }
 
 .proof-point__text {
     margin-bottom: .75em;
     color: rgba(#fff, .8);
-    font-family: $gotham;
+    font-family: "Helvetica Neue",Helvetica,Arial,sans;
     text-align: center;
 }
 
