--- a/src/scss/fizz.scss
+++ b/src/scss/fizz.scss
@@ -40,6 +40,13 @@
 "modules/moving-picture",
 "modules/section--home",
 
+"enhance/slick",
+"enhance/carousel",
+
+"modules/flickity",
+"modules/flickity-custom",
+"modules/moving-picture--flickity",
+
 "enhance/accordion",
 "enhance/animation",
 "enhance/big-steps",
@@ -51,8 +58,6 @@
 "enhance/proof-points",
 "enhance/quotes",
 "enhance/svg-icons",
-"enhance/slick",
-"enhance/carousel",
 "enhance/image-hover", 
 "enhance/collapsible-block", 
 "enhance/odometer",
