--- a/src/templates/partials/carousel.hbs
+++ b/src/templates/partials/carousel.hbs
@@ -1,22 +1,50 @@
 <div class="slick-carousel  carousel--overlay">
     <div class="slick-item">
-        <a href="http://bethel.edu/stories/patrick-keefe" title="">
-            <img class="feature__img" src="https://cdn2.bethel.edu/resize/unsafe/1500x0/smart/http://www.bethel.edu/stories/images/profile-keefe-home.jpg" style="opacity: 1;" title="">
-            <figure class="feature__figure">
-                <blockquote class="feature__blockquote">I find meaning in my work every day.</blockquote>
-                <figcaption class="feature__figcaption">Patrick Keefe, CFO of the Greater Minnesota Housing Fund, on lifelong learning as an executive.</figcaption>
-            </figure>
-        </a>
+    <div class="moving-picture">
+            <div class="moving-picture__media">
+                                
+                                                            <picture>
+                            
+                                                    <source bethel-lazy="                     //cdn3.bethel.edu/resize/unsafe/800x0/smart/https://www.bethel.edu/_homepages/www/images/feature/best-professors-16x9.jpg 800w,            //cdn3.bethel.edu/resize/unsafe/900x0/smart/https://www.bethel.edu/_homepages/www/images/feature/best-professors-16x9.jpg 900w,            //cdn3.bethel.edu/resize/unsafe/1000x0/smart/https://www.bethel.edu/_homepages/www/images/feature/best-professors-16x9.jpg 1000w,            //cdn3.bethel.edu/resize/unsafe/1100x0/smart/https://www.bethel.edu/_homepages/www/images/feature/best-professors-16x9.jpg 1100w,            //cdn3.bethel.edu/resize/unsafe/1200x0/smart/https://www.bethel.edu/_homepages/www/images/feature/best-professors-16x9.jpg 1200w,            //cdn3.bethel.edu/resize/unsafe/1300x0/smart/https://www.bethel.edu/_homepages/www/images/feature/best-professors-16x9.jpg 1300w,            //cdn3.bethel.edu/resize/unsafe/1400x0/smart/https://www.bethel.edu/_homepages/www/images/feature/best-professors-16x9.jpg 1400w,            //cdn3.bethel.edu/resize/unsafe/1500x0/smart/https://www.bethel.edu/_homepages/www/images/feature/best-professors-16x9.jpg 1500w,            //cdn3.bethel.edu/resize/unsafe/1600x0/smart/https://www.bethel.edu/_homepages/www/images/feature/best-professors-16x9.jpg 1600w,         " media="(min-width: 830px)" srcset="                     //cdn3.bethel.edu/resize/unsafe/800x0/smart/https://www.bethel.edu/_homepages/www/images/feature/best-professors-16x9.jpg 800w,            //cdn3.bethel.edu/resize/unsafe/900x0/smart/https://www.bethel.edu/_homepages/www/images/feature/best-professors-16x9.jpg 900w,            //cdn3.bethel.edu/resize/unsafe/1000x0/smart/https://www.bethel.edu/_homepages/www/images/feature/best-professors-16x9.jpg 1000w,            //cdn3.bethel.edu/resize/unsafe/1100x0/smart/https://www.bethel.edu/_homepages/www/images/feature/best-professors-16x9.jpg 1100w,            //cdn3.bethel.edu/resize/unsafe/1200x0/smart/https://www.bethel.edu/_homepages/www/images/feature/best-professors-16x9.jpg 1200w,            //cdn3.bethel.edu/resize/unsafe/1300x0/smart/https://www.bethel.edu/_homepages/www/images/feature/best-professors-16x9.jpg 1300w,            //cdn3.bethel.edu/resize/unsafe/1400x0/smart/https://www.bethel.edu/_homepages/www/images/feature/best-professors-16x9.jpg 1400w,            //cdn3.bethel.edu/resize/unsafe/1500x0/smart/https://www.bethel.edu/_homepages/www/images/feature/best-professors-16x9.jpg 1500w,            //cdn3.bethel.edu/resize/unsafe/1600x0/smart/https://www.bethel.edu/_homepages/www/images/feature/best-professors-16x9.jpg 1600w,         ">
+                            
+                                                        <img bethel-lazy="//cdn2.bethel.edu/resize/unsafe/830x0/smart/https://www.bethel.edu/_homepages/www/images/feature/best-professors-2x1.jpg" src="//cdn2.bethel.edu/resize/unsafe/830x0/smart/https://www.bethel.edu/_homepages/www/images/feature/best-professors-2x1.jpg">
+                                                    
+                        </picture>
+                                        </div>
+            
+
+            <div class="moving-picture__overlay">
+                                <h2 class="moving-picture__overlay__headline">Learn from the best.</h2>
+                                            <p class="moving-picture__overlay__teaser">Bethel professors are brilliant, experienced, and dedicated. They love what they do and will be your mentors and guides as you work to reach your goals. </p>
+                                                    
+                                <p><a class="moving-picture__overlay__button" href="admissions/index.php">Start Your Education</a></p>
+                                
+                        </div>
+        </div>
     </div>
 
     <div class="slick-item">
-        <a href="http://bethel.edu/stories/matthew-kirk" title="">
-            <img class="feature__img" src="https://cdn2.bethel.edu/resize/unsafe/1500x0/smart/http://www.bethel.edu/stories/images/profile-kirk-home.jpg" title="" style="opacity: 1;">
-            <figure class="feature__figure">
-                <blockquote class="feature__blockquote">No matter where you go or who you talk to at Bethel, everyone encourages you to keep going.</blockquote>
-                <figcaption class="feature__figcaption">Alum Matthew Kirk ‘14 shares his Bethel story.</figcaption>
-            </figure>
-        </a>
+<div class="moving-picture">
+        <div class="moving-picture__media">
+                            
+                                                        <picture>
+                        
+                                                <source bethel-lazy="                     //cdn2.bethel.edu/resize/unsafe/800x0/smart/https://www.bethel.edu/_homepages/www/images/feature/seminary-theology-16x9.jpg 800w,            //cdn2.bethel.edu/resize/unsafe/900x0/smart/https://www.bethel.edu/_homepages/www/images/feature/seminary-theology-16x9.jpg 900w,            //cdn2.bethel.edu/resize/unsafe/1000x0/smart/https://www.bethel.edu/_homepages/www/images/feature/seminary-theology-16x9.jpg 1000w,            //cdn2.bethel.edu/resize/unsafe/1100x0/smart/https://www.bethel.edu/_homepages/www/images/feature/seminary-theology-16x9.jpg 1100w,            //cdn2.bethel.edu/resize/unsafe/1200x0/smart/https://www.bethel.edu/_homepages/www/images/feature/seminary-theology-16x9.jpg 1200w,            //cdn2.bethel.edu/resize/unsafe/1300x0/smart/https://www.bethel.edu/_homepages/www/images/feature/seminary-theology-16x9.jpg 1300w,            //cdn2.bethel.edu/resize/unsafe/1400x0/smart/https://www.bethel.edu/_homepages/www/images/feature/seminary-theology-16x9.jpg 1400w,            //cdn2.bethel.edu/resize/unsafe/1500x0/smart/https://www.bethel.edu/_homepages/www/images/feature/seminary-theology-16x9.jpg 1500w,            //cdn2.bethel.edu/resize/unsafe/1600x0/smart/https://www.bethel.edu/_homepages/www/images/feature/seminary-theology-16x9.jpg 1600w,         " media="(min-width: 830px)" srcset="                     //cdn2.bethel.edu/resize/unsafe/800x0/smart/https://www.bethel.edu/_homepages/www/images/feature/seminary-theology-16x9.jpg 800w,            //cdn2.bethel.edu/resize/unsafe/900x0/smart/https://www.bethel.edu/_homepages/www/images/feature/seminary-theology-16x9.jpg 900w,            //cdn2.bethel.edu/resize/unsafe/1000x0/smart/https://www.bethel.edu/_homepages/www/images/feature/seminary-theology-16x9.jpg 1000w,            //cdn2.bethel.edu/resize/unsafe/1100x0/smart/https://www.bethel.edu/_homepages/www/images/feature/seminary-theology-16x9.jpg 1100w,            //cdn2.bethel.edu/resize/unsafe/1200x0/smart/https://www.bethel.edu/_homepages/www/images/feature/seminary-theology-16x9.jpg 1200w,            //cdn2.bethel.edu/resize/unsafe/1300x0/smart/https://www.bethel.edu/_homepages/www/images/feature/seminary-theology-16x9.jpg 1300w,            //cdn2.bethel.edu/resize/unsafe/1400x0/smart/https://www.bethel.edu/_homepages/www/images/feature/seminary-theology-16x9.jpg 1400w,            //cdn2.bethel.edu/resize/unsafe/1500x0/smart/https://www.bethel.edu/_homepages/www/images/feature/seminary-theology-16x9.jpg 1500w,            //cdn2.bethel.edu/resize/unsafe/1600x0/smart/https://www.bethel.edu/_homepages/www/images/feature/seminary-theology-16x9.jpg 1600w,         ">
+                        
+                                                    <img bethel-lazy="//cdn2.bethel.edu/resize/unsafe/830x0/smart/https://www.bethel.edu/_homepages/www/images/feature/seminary-theology-2x1.jpg" src="//cdn2.bethel.edu/resize/unsafe/830x0/smart/https://www.bethel.edu/_homepages/www/images/feature/seminary-theology-2x1.jpg">
+                                                
+                    </picture>
+                                    </div>
+        
+
+        <div class="moving-picture__overlay">
+                            <h2 class="moving-picture__overlay__headline">We live our beliefs inside and outside the classroom.</h2>
+                                        <p class="moving-picture__overlay__teaser">Join a community of people who love to ask important questions, talk about their faith, and learn from each other’s perspectives. </p>
+                                                
+                            <p><a class="moving-picture__overlay__button" href="seminary/index.php">Learn More about Bethel Seminary</a></p>
+                            
+                    </div>
+    </div>
 
     </div>
 </div>
