--- a/src/scss/base/_fluidity.scss
+++ b/src/scss/base/_fluidity.scss
@@ -16,6 +16,8 @@ textarea {
   max-width: 100%; 
 }
 
+img[data-sizes="auto"] { display: block; }
+
 /* Wrap tables or pre elements in a div with this class */
 
 .overflow-container {
