--- a/src/templates/partials/moving-picture.hbs
+++ b/src/templates/partials/moving-picture.hbs
@@ -1,10 +1,4 @@
-<div    class="flickity  js-flickity"
-        data-flickity-options='{ 
-            "wrapAround": true,
-            "imagesLoaded": true,
-            "initialIndex": 0,
-            "pageDots":false
-            }'>
+<div    class="flickity  js-rotate-order-carousel">
 
     <div class="flickity--cell">
         <div class="moving-picture">
