--- a/src/scss/enhance/_quotes.scss
+++ b/src/scss/enhance/_quotes.scss
@@ -1,20 +1,29 @@
-.quote__text,
-.quote cite {
+.quote {
+    // padding: 2em;
+}
+
+.quote__text {
     // font-family: "Gotham A", "Gotham B";
     font-weight: 400;
     font-style:normal;
 }
 
-.quote__text {
-    // font-size: 1.2em;
-    // font-size: 1.2rem;
-    // margin-bottom: 1.5em;
+.quote__avatar + .quote__text {
+    @include respond-min($x-large){
+        margin-left: 10em;
+    }
 }
 
 .quote__avatar {
     border-radius: 50%;
     overflow:hidden;
     line-height:0;
-    max-width: 150px;
-    margin: 0 auto;
+    width: 8em;
+    height: 8em;
+    margin: 0 auto 1em;
+    // background: #777;can 
+
+    @include respond-min($x-large){
+        float: left;
+    }
 }
