--- a/src/scss/base/_fluidity.scss
+++ b/src/scss/base/_fluidity.scss
@@ -16,7 +16,10 @@ textarea {
   max-width: 100%; 
 }
 
-img[data-sizes="auto"] { display: block; }
+img[data-sizes="auto"] { 
+    display: block; 
+    width: 100%;
+}
 
 /* Wrap tables or pre elements in a div with this class */
 
